add export and import method for yamlfile
