# docs/swagger.yaml
@@ -914,6 +914,93 @@ paths:
           description: User need to log in first.
         500:
           description: Internal errors.  
+  /v1/services/yaml/upload:
+    post:
+      summary: Return specific service_name status.
+      description:
+        This endpoint returns specific service status by service_name.
+      consumes:
+        - multipart/form-data
+      parameters:
+        - name: token
+          in: header
+          type: string
+          required: true
+          description: Current available token.
+        - name: service_name
+          in: query
+          description: Service name for filtering results.
+          required: true
+          type: integer
+          format: string
+        - name: project_name
+          in: query
+          description: project_name for filtering results.
+          required: true
+          type: integer
+          format: string
+        - name: yaml_type
+          in: query
+          description: service yaml file type for filtering results.
+          required: true
+          type: integer
+          format: string
+        - name: upload_file
+          in: formData
+          type: file
+          required: true
+          description: File to be uploaded.
+      tags:
+        - Products
+      responses:
+        200:
+          description: An array of search results.           
+        400:
+          description: Bad Request
+        401:
+          description: Unauthorized
+        500:
+          description: Unexpected internal errors. 
+  /v1/services/yaml/download:
+    get:
+      summary: Return specific service_name status.
+      description: |
+        This endpoint returns specific service status by service_name.
+      parameters:
+        - name: token
+          in: header
+          type: string
+          required: true
+          description: Current available token.
+        - name: service_name
+          in: query
+          description: Service name for filtering results.
+          required: true
+          type: integer
+          format: string
+        - name: project_name
+          in: query
+          description: project_name for filtering results.
+          required: true
+          type: integer
+          format: string
+        - name: yaml_type
+          in: query
+          description: service yaml file type for filtering results.
+          required: true
+          type: integer
+          format: string
+      tags:
+        - Products
+      responses:
+        200:
+          description: An array of search results.           
+        400:
+          description: Bad Request
+        401:
+          description: Unauthorized
+        500:
+          description: Unexpected internal errors.
   /v1/services/status/{service_name}:
     get:
       summary: Return specific service_name status.
