# src/apiserver/router/router.go
@@ -120,6 +120,12 @@ func init() {
 			beego.NSRouter("/services/status/:service_name([a-z0-9]+)",
 				&controller.ServiceController{},
 				"get:GetServiceStatusAction"),
+			beego.NSRouter("/services/yaml/upload",
+				&controller.ConfigFilesController{},
+				"post:UploadDeploymentYamlFileAction"),
+			beego.NSRouter("/services/yaml/download",
+				&controller.ConfigFilesController{},
+				"get:DownloadDeploymentYamlFileAction"),
 			beego.NSRouter("/services/info/:service_name([a-z0-9]+)",
 				&controller.ServiceController{},
 				"get:GetServiceInfoAction"),
